--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">GeoQuiz</string>
     <string name="culture">企业文化</string>
+    <string name="inofcm">董事长巴拉巴拉</string>
+    <string name="inofcomp">某某集团是世界上巴拉巴拉</string>
 </resources>
