--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="culture">企业文化</string>
     <string name="inofcm">董事长巴拉巴拉</string>
     <string name="inofcomp">某某集团是世界上巴拉巴拉</string>
+    <string name="sercive">我们的服务理念是：世界和平</string>
 </resources>
