--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,11 @@
 <resources>
     <string name="app_name">GeoQuiz</string>
     <string name="culture">企业文化</string>
-    <string name="inofcm">董事长巴拉巴拉</string>
-    <string name="inofcomp">某某集团是世界上巴拉巴拉</string>
-    <string name="sercive">我们的服务理念是：世界和平</string>
+    <string name="inofcm">集团董事长：谭政松先生</string>
+    <string name="inofcomp">泰王国好运（兄弟）旅游集团(LUCKY GUY EXPRESS CO,LTD)成立于2010年10月。其前身泰王国新国大旅游公司则成立于1993年9月，并于1999年更名泰王国好运旅游公司，2010年添加兄弟2字，正式更名至今。泰王国泰好运（兄弟）旅运集团成立于公历1992年，集团总部位于泰国首都曼谷的精华地段，业务遍布中国各个区域，以提供中国旅游者最舒适的旅游接待服务。
+泰王国泰好运（兄弟）旅运集团是经泰国国家旅游局批准，专门从事中国旅游团体赴泰旅游接待的大型综合集团，是泰中旅游协会成员、泰中旅游同业协会会员之一。
+</string>
+    <string name="sercive">成立以来一直秉持「用心服务 用情导游」的理念，服务每一位参加的游客，建立起泰好运的良好口碑。近二十年来通过精英团队的不懈努力，专业的态度和资深的实力，备受各界好评。使国内同业合作伙伴一提到泰国旅游，就想到「泰好运」；傲眼的成绩让「泰好运」成为泰国最具规模的旅游综合集团。
+专业‧创新‧用心是我们对顾客的承诺，提供最完善的旅游产品。总公司分成各个部门，规划国内外丰富行程，以符合各消费族群的需求。此外，商务旅游、渡假会议、员工旅游、公司行号奖励旅游，集团也都能量身规划，高质量的保证与亲切服务，满足顾客得到肯定；是我们一直努力不懈的目标。
+</string>
 </resources>
